--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -36,7 +36,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
+    - run: npm run build -c production
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
       with:
