--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "sitemap": "npx tsx src/app/sitemap/generate-sitemap.ts",
     "start": "ng serve",
     "build": "npm run sitemap && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:ng-website": "node dist/ng-website/server/server.mjs",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "sitemap": "tsx src/app/sitemap/generate-sitemap.ts"
   },
   "private": true,
   "dependencies": {
@@ -50,6 +50,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tsx": "^4.7.1",
     "typescript": "~5.2.2",
     "xml-js": "^1.6.11"
   }
